# GodotPP

./: CMakeLists.txt
.github/workflows/: build.yml
game/: project.godot
game/scenes/: escape_menu.tscn  game.tscn  main_menu.tscn
game/scripts/autoloads/: game_instance.gd  game_instance.gd.uid
game/scripts/scenes/: escape_menu.gd  escape_menu.gd.uid  game_scene.gd  game_scene.gd.uid  main_menu.gd  main_menu.gd.uid
src/: CMakeLists.txt
src/godotpp/: CMakeLists.txt
src/godotpp/include/: gd_example.h  linking_context.h  net_manager.h  player_controller.h
src/godotpp/src/: gd_example.cpp  net_manager.cpp  player_controller.cpp  register_types.cpp
src/server/: CMakeLists.txt
src/server/include/: types.h
src/server/include/scene/: components.h  scene.h
src/server/src/: main.cpp
src/server/src/scene/: scene.cpp
src/shared/: CMakeLists.txt  PacketDefinition.h
src/shared/include/: maths_types.h  net_protocol.h  net_serializer.h  utils.h
src/shared/include/serialization/: serialization_utils.h  serializer.h
src/shared/src/: net_serializer.cpp
